--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -8,7 +8,7 @@
 	<h2>Contact Me</h2>
 </p>
 <p>
-	<h4>My name is <a href="http://www.linkedin.com/pub/rebecca-standig/83/879/763" target-"_blank">Rebecca Standig</a>. I'm a software engineer in San Francisco, CA.<br> I studied linguistics at <a href="http://www.barnard.edu" target="_blank">Barnard College</a> and graduated in 2010.<br>
+	<h4>My name is <a href="http://www.linkedin.com/pub/rebecca-standig/83/879/763" target="_blank">Rebecca Standig</a>. I'm a software engineer in San Francisco, CA.<br> I studied linguistics at <a href="http://www.barnard.edu" target="_blank">Barnard College</a> and graduated in 2010.<br>
 	The Manually Annotated Twitter Corpus was my final project at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a>.<br><br>
 	<h3>Tweet at me: <a href="http://www.twitter.com/understandig" target="_blank">@understandig</a></h3>
 	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
