--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -9,11 +9,13 @@
 </p>
 <p>
 	<!-- add in rebeccastandig.com when up on heroku -->
-	<h4>My name is <a href="http://www.linkedin.com/pub/rebecca-standig/83/879/763" target="_blank">Rebecca Standig</a>. I'm a software engineer in San Francisco, CA.<br> I studied linguistics at <a href="http://www.barnard.edu" target="_blank">Barnard College</a> and graduated in 2010.<br>
+	<h4>My name is <a href="http://www.rebeccastandig.com" target="_blank">Rebecca Standig</a>. I'm a software engineer in San Francisco, CA.<br> I studied linguistics at <a href="http://www.barnard.edu" target="_blank">Barnard College</a> and graduated in 2010.<br>
 	The Manually Annotated Twitter Corpus was my final project at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a>.<br><br>
 	<h3>Tweet at me: <a href="http://www.twitter.com/understandig" target="_blank">@understandig</a></h3>
 	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
 	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig" target="_blank">rebeccastandig</a></h3>
+	<h3>Connect on LinkedIn: <a href="http://www.linkedin.com/pub/rebecca-standig/83/879/763" target="_blank">rebecca-standig</a></h3>
+	<h3>View my personal website: <a href="http://www.rebeccastandig.com">rebeccastandig.com</a></h3>
 </p>
 {% endblock %}
 
