Fixed personal website link target to blank

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -15,7 +15,7 @@
 	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
 	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig" target="_blank">rebeccastandig</a></h3>
 	<h3>Connect on LinkedIn: <a href="http://www.linkedin.com/pub/rebecca-standig/83/879/763" target="_blank">rebecca-standig</a></h3>
-	<h3>View my personal website: <a href="http://www.rebeccastandig.com">rebeccastandig.com</a></h3>
+	<h3>View my personal website: <a href="http://www.rebeccastandig.com" target="_blank">rebeccastandig.com</a></h3>
 </p>
 {% endblock %}
 
