Added visualization templates and links

--- a/templates/corpus.html
+++ b/templates/corpus.html
@@ -14,8 +14,7 @@
 	<h3><a href="{{url_for('corpus_browse')}}">If you just want to browse</h3></a>
 </p>
 <p>
-	<h3>If you want to see visualizations</h3>
-	<h4>Coming soon!</h4>
+	<h3><a href="{{url_for('vis')}}">If you want to see visualizations</a></h3>
 </p>
 <p>
 	<h3><a href="{{url_for('guide')}}">Guide to the part of speech tags</a></h3>
