--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="/static/css/localcss.css">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="icon" href="/static/img/3tigers.png" type="image/x-icon">
+        <script type="text/javascript" src="http://d3js.org/d3.v2.js"></script>
+        <script type="text/javascript" src="http://www.treesheets.org/hotlink/cts.js"></script>
+        <script type="text/cts" src="http://people.csail.mit.edu/eob/cts/widgets/bubblechart.cts"></script>
     </head>
     <body>
         <div class="navigation">
