Changed reference links to open in new window

--- a/templates/game.html
+++ b/templates/game.html
@@ -12,8 +12,8 @@
 <h2>Tres Tigres
 <image src="/static/img/3tigers.png" width='100' height='100'>
 </h2>
-<h3><a href="{{url_for('howto')}}">How to play tutorial</a>.</h3>
-<h3><a href="{{url_for('photoref')}}">Part of speech photo reference</a>.</h3>
+<h3><a href="{{url_for('howto')}}" target="_blank">How to play tutorial</a>.</h3>
+<h3><a href="{{url_for('photoref')}}" target="_blank">Part of speech photo reference</a>.</h3>
 	
 <div class="gamebox">
 	<p>
