--- a/templates/browse_list_words.html
+++ b/templates/browse_list_words.html
@@ -4,7 +4,7 @@
 	<a href="{{url_for('logout')}}">{{not_you}}</a></p>
 {% endblock %}
 {% block body %}
-{% for tag in tag_list %}
+{% for tag in corpus_list %}
 <p>
 	<h3><a href="/corpus/browse/pos/{{tag}}">{{word}}</a></h3>
 </p>
