--- a/templates/browse_list_pos.html
+++ b/templates/browse_list_pos.html
@@ -4,9 +4,24 @@
 	<a href="{{url_for('logout')}}">{{not_you}}</a></p>
 {% endblock %}
 {% block body %}
-{% for tag in corpus_list %}
+<!-- {% for tag in corpus_list %}
 <p>
 	<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
-</p>
-{% endfor %}
+</p> -->
+<p>Please refer to the <a href="{{url_for('guide')}}">part of speech guide</a> for more information on what each tag refers to.</p>
+<table>
+	<tr>
+		<td>
+		{% for tag in first_half %}
+		<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
+		{% endfor %}
+		</td>
+		<td>
+		{% for tag_sent in second_half %}
+		<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
+		{% endfor %}
+		</td>
+	</tr>
+</table>
+<!-- {% endfor %} -->
 {% endblock %}
