--- a/templates/browse_words_by_pos.html
+++ b/templates/browse_words_by_pos.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2>Words tagged as {{tag}}</h2>
+	<h2>Words tagged as "{{tag}}"</h2>
 </p>
 {% for word in word_list %}
 <p>
