Fixed typo in second tr

--- a/templates/browse_list_pos.html
+++ b/templates/browse_list_pos.html
@@ -15,7 +15,7 @@
 	</tr>
 	<tr>
 		<td>
-		{% for tag_sent in second_half %}
+		{% for tag in second_half %}
 		<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
 		{% endfor %}
 		</td>
