--- a/templates/browse_list_pos.html
+++ b/templates/browse_list_pos.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <p>Please refer to the <a href="{{url_for('guide')}}">part of speech guide</a> for more information on what each tag refers to.</p>
-<table>
+<table cellpadding="20">
 	<tr>
 		<td>
 		{% for tag in first_half %}
