Adding longer links

--- a/templates/browse_list_pos.html
+++ b/templates/browse_list_pos.html
@@ -9,12 +9,12 @@
 	<tr>
 		<td>
 		{% for tag in first_half %}
-		<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
+		<h3><a href="/corpus/browse/pos/{{tag}}"> Words tagged as "{{tag}}"</a></h3>
 		{% endfor %}
 		</td>
 		<td>
 		{% for tag in second_half %}
-		<h3><a href="/corpus/browse/pos/{{tag}}">{{tag}}</a></h3>
+		<h3><a href="/corpus/browse/pos/{{tag}}">Words tagged as "{{tag}}"</a></h3>
 		{% endfor %}
 		</td>
 	</tr>
