--- a/templates/about_faqs.html
+++ b/templates/about_faqs.html
@@ -14,7 +14,7 @@
 		<h3>I lost my password. What should I do?</h3>
 			<p>Unfortunately, you'll have to <a href="{{url_for('register')}}">create a new account</a>.</p>
 		<h3>Who created The MATC Project?</h3>
-			<p>My name is <a href="http://twitter.com/understandig">Rebecca Standig.</a> I created The MATC Project as part of my studies at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy.</a></p>
+			<p>My name is <a href="http://www.rebeccastandig.com">Rebecca Standig.</a> I created The MATC Project as part of my studies at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy.</a></p>
 			<p>For more information on who I am or why I did this (or to hire me!), please <a href="{{url_for('contact_me')}}">contact me.</a></p>
 		<h3>Can I look at the code for all of this/Can you give me some more technical information?</h3>
 			<p>Sure! All of the code for The MATC Project is available on <a href="https://github.com/rebeccastandig/TheMATCProject" target="_blank">my GitHub repository</a>.</p>
