Fixed CMU paper link to open in new window

--- a/templates/info_for_linguists.html
+++ b/templates/info_for_linguists.html
@@ -7,7 +7,7 @@
 <p>
 	<h2>Information for Linguists (and Interested Non-Linguists)</h2>
 		<h3>How did you choose your part of speech tags?</h3>
-			<p>I slightly modified the tags found in <a href="http://www.ark.cs.cmu.edu/TweetNLP/gimpel+etal.acl11.pdf">this paper</a> from researchers at Carnegie Mellon University. In general, I chose to get rid of the tags in the paper that were described as 'Twitter/online-specific' and 'Miscellaneous'. I am interested in creating a corpus of text speak/neologisms that may not be annotated anywhere else (or available for free). Emoticons, punctuation, numerals, Twitter handles, et cetera, are not linguistically relevant for the purposes of <i>The TwitUrban Dictionary</i>.</p>
+			<p>I slightly modified the tags found in <a href="http://www.ark.cs.cmu.edu/TweetNLP/gimpel+etal.acl11.pdf" target="_blank">this paper</a> from researchers at Carnegie Mellon University. In general, I chose to get rid of the tags in the paper that were described as 'Twitter/online-specific' and 'Miscellaneous'. I am interested in creating a corpus of text speak/neologisms that may not be annotated anywhere else (or available for free). Emoticons, punctuation, numerals, Twitter handles, et cetera, are not linguistically relevant for the purposes of <i>The TwitUrban Dictionary</i>.</p>
 
 			<p>If you have questions or comments about why I chose to only tag these certain parts of speech, please <a href="{{url_for('contact_me')}}">contact me.</a></p>
 
