Change to 5 character username requirement

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 
 	<div class="form">
 		<form method="POST">
-            <p>User name and password must each be 6-15 alphanumeric characters (A-Z, a-z, 0-9).</p>
+            <p>User name and password must be alphanumeric characters (A-Z, a-z, 0-9).</p>
             <p><input type="text" placeholder="User Name" name="name"></p>
             <p><input type="password" placeholder="Password" name="pw"></p>
             <p><input type="password" placeholder="Verify Password" name="verify_pw"></p>
