Edited linkedin link

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -13,7 +13,7 @@
 	<a href="http://www.twitter.com/understandig" target="_blank"><img src="/static/img/twitter.png"></a>
 	<a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank"><img src="/static/img/email.png"></a>
 	<a href="https://www.github.com/rebeccastandig" target="_blank"><img src="/static/img/github.png"></a>
-	<a href="http://www.linkedin.com/in/rebecca-standig" target="_blank"><img src="/static/img/linkedin.png"></a>
+	<a href="http://www.linkedin.com/in/rebeccastandig" target="_blank"><img src="/static/img/linkedin.png"></a>
 </p>
 {% endblock %}
 
