--- a/templates/game.html
+++ b/templates/game.html
@@ -57,6 +57,26 @@
 {% block javascript %}
 <script type="text/javascript">
 	var tweets_gotten = 0;
+	var tag = $('button.game').attr('id');
+	var word = "{{word}}";
+	var tweet = "{{tweet}}";
+	var name = "{{user}}"
+	var num_tagged = "{{num_tagged}}"
+	var num_final_tagged = "{{num_final_tagged}}"
+	var engage = function(){
+		var buttonProperties{
+			"pos": tag,
+			"word": word,
+			"user":{
+				"name": name,
+				"num_tagged":num_tagged
+				"num_final_tagged": num_final_tagged
+			}
+
+		};
+		return Keen.addEvent('tag_pos', buttonProperties);
+	};
+
 	$(document).ready(function(){
 		$('button.game').click(function(){
 			var tag = $(this).attr('id');
@@ -65,19 +85,6 @@
 			var name = "{{user}}"
 			var num_tagged = "{{num_tagged}}"
 			var num_final_tagged = "{{num_final_tagged}}"
-			var engage = function(){
-				var buttonProperties{
-					"pos": tag,
-					"word": word,
-					"user":{
-						"name": name,
-						"num_tagged":num_tagged
-						"num_final_tagged": num_final_tagged
-					}
-
-				};
-				return Keen.addEvent('tag_pos', buttonProperties);
-			};
 			$.post("/game", {"tag": tag, "word": word, "tweet": tweet}, function(responseFromServer){
 				location.reload();
 			});
