Fixing keen jinja

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
 
       // Configure the Keen object with your Project ID and access keys.
       Keen.configure({
-          projectId: {{project_id}},
-          writeKey: {{write_key}}, // required for sending events
-          readKey: {{read_key}}    // required for doing analysis
+          projectId: "{{project_id}}",
+          writeKey: "{{write_key}}", // required for sending events
+          readKey: "{{read_key}}"    // required for doing analysis
       });
       
     </script>
